kubernetes: Fix the alignment of Services in the topology view
These icons seem to have changed size after a Patternfly update.

Closes #4424

--- a/pkg/kubernetes/styles/topology.less
+++ b/pkg/kubernetes/styles/topology.less
@@ -68,3 +68,6 @@ kubernetes-topology-icon {
     font-size: 22px;
 }
 
+.kube-topology g.Service text {
+    font-size: 22px;
+}
